feat: add folder test and some files

--- a/CipheringCLITool/package.json
+++ b/CipheringCLITool/package.json
@@ -1,10 +1,22 @@
 {
-  "name": "CipheringCLITool",
+  "name": "ciphering-cli-tool",
   "version": "1.0.0",
-  "description": "",
+  "description": "https://github.com/Yura703/Basic-nodejs-course/",
   "main": "index.js",
+  "dependencies": {
+    "-": "^0.0.1",
+    "@types/jest": "^27.0.2"
+  },
+  "devDependencies": {
+    "jest": "^27.3.1",
+    "@types/jest": "^27.0.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Yura703/Basic-nodejs-course.git"
   },
   "keywords": [],
   "author": "LapitskiYuri",
