--- a/CipheringCLITool/package.json
+++ b/CipheringCLITool/package.json
@@ -10,9 +10,14 @@
   "devDependencies": {
     "jest": "^27.3.1",
     "@types/jest": "^27.0.2"
-  },
+  },  
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
+  },
+  "jest": {
+    "verbose": true,
+    "collectCoverageFrom" : ["src/**/*.js"]
   },
   "repository": {
     "type": "git",
